trunk/Archive2/d4/f1d4960c0e3c36/output
main.cpp:42:5: error: member function 'Bar' not viable: 'this' argument has type 'const Foo', but function is not marked const
    (*p2).Bar();
    ^~~~~
main.cpp:25:10: note: 'Bar' declared here
    void Bar() { x++; }
         ^
main.cpp:44:5: error: member function 'Bar' not viable: 'this' argument has type 'const Foo', but function is not marked const
    p2->Bar();
    ^~
main.cpp:25:10: note: 'Bar' declared here
    void Bar() { x++; }
         ^
2 errors generated.
